# resumai

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  scent.py
resumai/: __init__.py  cli.py  resume.py
tests/: test_resume.py
tests/resources/: example_resume.toml
